Add gitignore setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,5 +74,6 @@
         "cfenv": "cpp",
         "future": "cpp",
         "geometry": "cpp"
-    }
+    },
+    "search.useIgnoreFiles": false
 }
