--- a/compose.yml
+++ b/compose.yml
@@ -18,6 +18,7 @@ services:
       - QT_X11_NO_MITSHM=1
     volumes:
       - .:/distal_ws:cached
+      - ../Colosseum/:/Colosseum/
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
       - /etc/passwd:/etc/passwd:ro
       - /etc/group:/etc/group:ro
