--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,7 +79,32 @@
         "typeinfo": "cpp",
         "valarray": "cpp",
         "variant": "cpp",
-        "regex": "cpp"
+        "regex": "cpp",
+        "*.ipp": "cpp",
+        "coroutine": "cpp",
+        "source_location": "cpp",
+        "core": "cpp",
+        "specialfunctions": "cpp"
     },
-    "search.useIgnoreFiles": false
+    "search.useIgnoreFiles": false,
+    "python.autoComplete.extraPaths": [
+        "/home/erinpc/src/humble_distal/install/messages_88/local/lib/python3.10/dist-packages",
+        "/home/erinpc/src/humble_distal/install/mavros/local/lib/python3.10/dist-packages",
+        "/home/erinpc/src/humble_distal/install/mavros_msgs/local/lib/python3.10/dist-packages",
+        "/home/erinpc/src/sensors/ws_livox/install/livox_ros_driver2/lib/python3.8/site-packages",
+        "/home/erinpc/src/ros2_distal/distal/install/messages_88/lib/python3.8/site-packages",
+        "/home/erinpc/src/ros2_distal/distal/install/mavros/lib/python3.8/site-packages",
+        "/home/erinpc/src/ros2_distal/distal/install/mavros_msgs/lib/python3.8/site-packages",
+        "/opt/ros/foxy/lib/python3.8/site-packages"
+    ],
+    "python.analysis.extraPaths": [
+        "/home/erinpc/src/humble_distal/install/messages_88/local/lib/python3.10/dist-packages",
+        "/home/erinpc/src/humble_distal/install/mavros/local/lib/python3.10/dist-packages",
+        "/home/erinpc/src/humble_distal/install/mavros_msgs/local/lib/python3.10/dist-packages",
+        "/home/erinpc/src/sensors/ws_livox/install/livox_ros_driver2/lib/python3.8/site-packages",
+        "/home/erinpc/src/ros2_distal/distal/install/messages_88/lib/python3.8/site-packages",
+        "/home/erinpc/src/ros2_distal/distal/install/mavros/lib/python3.8/site-packages",
+        "/home/erinpc/src/ros2_distal/distal/install/mavros_msgs/lib/python3.8/site-packages",
+        "/opt/ros/foxy/lib/python3.8/site-packages"
+    ]
 }
