--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,13 @@
 {
     "files.associations": {
+        "*.cpp": "cpp",
+        "*.hpp": "cpp",
+        "*.h": "cpp",
+        "future": "cpp",
         "cctype": "cpp",
         "clocale": "cpp",
         "cmath": "cpp",
+        "csignal": "cpp",
         "cstdarg": "cpp",
         "cstddef": "cpp",
         "cstdio": "cpp",
@@ -11,32 +16,39 @@
         "ctime": "cpp",
         "cwchar": "cpp",
         "cwctype": "cpp",
+        "any": "cpp",
         "array": "cpp",
         "atomic": "cpp",
+        "strstream": "cpp",
+        "bit": "cpp",
         "*.tcc": "cpp",
         "bitset": "cpp",
         "chrono": "cpp",
+        "codecvt": "cpp",
+        "compare": "cpp",
         "complex": "cpp",
+        "concepts": "cpp",
         "condition_variable": "cpp",
         "cstdint": "cpp",
         "deque": "cpp",
+        "forward_list": "cpp",
         "list": "cpp",
+        "map": "cpp",
+        "set": "cpp",
+        "string": "cpp",
         "unordered_map": "cpp",
+        "unordered_set": "cpp",
         "vector": "cpp",
         "exception": "cpp",
         "algorithm": "cpp",
         "functional": "cpp",
         "iterator": "cpp",
-        "map": "cpp",
         "memory": "cpp",
         "memory_resource": "cpp",
         "numeric": "cpp",
         "optional": "cpp",
         "random": "cpp",
         "ratio": "cpp",
-        "regex": "cpp",
-        "set": "cpp",
-        "string": "cpp",
         "string_view": "cpp",
         "system_error": "cpp",
         "tuple": "cpp",
@@ -51,29 +63,50 @@
         "limits": "cpp",
         "mutex": "cpp",
         "new": "cpp",
+        "numbers": "cpp",
         "ostream": "cpp",
+        "ranges": "cpp",
+        "semaphore": "cpp",
+        "shared_mutex": "cpp",
         "sstream": "cpp",
         "stdexcept": "cpp",
+        "stop_token": "cpp",
         "streambuf": "cpp",
         "thread": "cpp",
+        "cfenv": "cpp",
         "cinttypes": "cpp",
-        "typeinfo": "cpp",
-        "any": "cpp",
-        "strstream": "cpp",
-        "bit": "cpp",
-        "codecvt": "cpp",
-        "forward_list": "cpp",
         "typeindex": "cpp",
+        "typeinfo": "cpp",
         "valarray": "cpp",
         "variant": "cpp",
+        "regex": "cpp",
         "*.ipp": "cpp",
-        "hash_map": "cpp",
-        "hash_set": "cpp",
-        "csignal": "cpp",
-        "unordered_set": "cpp",
-        "cfenv": "cpp",
-        "future": "cpp",
-        "geometry": "cpp"
+        "coroutine": "cpp",
+        "source_location": "cpp",
+        "core": "cpp",
+        "specialfunctions": "cpp",
+        "span": "cpp"
     },
-    "search.useIgnoreFiles": false
+    "search.useIgnoreFiles": false,
+    "python.autoComplete.extraPaths": [
+        "/home/erinpc/src/humble_distal/install/messages_88/local/lib/python3.10/dist-packages",
+        "/home/erinpc/src/humble_distal/install/mavros/local/lib/python3.10/dist-packages",
+        "/home/erinpc/src/humble_distal/install/mavros_msgs/local/lib/python3.10/dist-packages",
+        "/home/erinpc/src/sensors/ws_livox/install/livox_ros_driver2/lib/python3.8/site-packages",
+        "/home/erinpc/src/ros2_distal/distal/install/messages_88/lib/python3.8/site-packages",
+        "/home/erinpc/src/ros2_distal/distal/install/mavros/lib/python3.8/site-packages",
+        "/home/erinpc/src/ros2_distal/distal/install/mavros_msgs/lib/python3.8/site-packages",
+        "/opt/ros/foxy/lib/python3.8/site-packages"
+    ],
+    "python.analysis.extraPaths": [
+        "/home/erinpc/src/humble_distal/install/messages_88/local/lib/python3.10/dist-packages",
+        "/home/erinpc/src/humble_distal/install/mavros/local/lib/python3.10/dist-packages",
+        "/home/erinpc/src/humble_distal/install/mavros_msgs/local/lib/python3.10/dist-packages",
+        "/home/erinpc/src/sensors/ws_livox/install/livox_ros_driver2/lib/python3.8/site-packages",
+        "/home/erinpc/src/ros2_distal/distal/install/messages_88/lib/python3.8/site-packages",
+        "/home/erinpc/src/ros2_distal/distal/install/mavros/lib/python3.8/site-packages",
+        "/home/erinpc/src/ros2_distal/distal/install/mavros_msgs/lib/python3.8/site-packages",
+        "/opt/ros/foxy/lib/python3.8/site-packages"
+    ],
+    "cmake.sourceDirectory": "/home/gus/src/distal/src/airsim-mavros-wrapper"
 }
