--- a/colcon_defaults.yaml
+++ b/colcon_defaults.yaml
@@ -1,8 +1,8 @@
-
-cmake-args:
-  - "-DCMAKE_C_COMPILER=clang"
-  - "-DCMAKE_CXX_COMPILER=clang++"
-  - "-DCMAKE_CXX_FLAGS='-fopenmp=libomp -building-pch-with-obj'"
-  - "-DCMAKE_C_FLAGS='-fopenmp=libomp -building-pch-with-obj'"
-mixins:
-  - lld
+build:
+  cmake-args:
+    - "-DCMAKE_C_COMPILER=clang"
+    - "-DCMAKE_CXX_COMPILER=clang++"
+    - "-DCMAKE_CXX_FLAGS='-fopenmp=libomp -building-pch-with-obj'"
+    - "-DCMAKE_C_FLAGS='-fopenmp=libomp -building-pch-with-obj'"
+  mixin:
+    - lld
