--- a/colcon_defaults.yaml
+++ b/colcon_defaults.yaml
@@ -2,7 +2,12 @@ build:
   cmake-args:
     - "-DCMAKE_C_COMPILER=clang"
     - "-DCMAKE_CXX_COMPILER=clang++"
-    - "-DCMAKE_CXX_FLAGS='-fopenmp=libomp -building-pch-with-obj'"
-    - "-DCMAKE_C_FLAGS='-fopenmp=libomp -building-pch-with-obj'"
-  mixin:
-    - lld
+    - "-DCMAKE_CXX_FLAGS='-fopenmp=libomp'"
+    - "-DCMAKE_C_FLAGS='-fopenmp=libomp'"
+
+    # These three cmake args could be replaced by the `lld` colcon mixin
+    # however I have not yet figured out a nice way to remove that mixin
+    # when compiling task manager, which does not play nice with lld
+    - "-DCMAKE_EXE_LINKER_FLAGS='-fuse-ld=lld'"
+    - "-DCMAKE_MODULE_LINKER_FLAGS='-fuse-ld=lld'"
+    - "-DCMAKE_SHARED_LINKER_FLAGS='-fuse-ld=lld'"
