--- a/colcon_defaults.yaml
+++ b/colcon_defaults.yaml
@@ -11,3 +11,5 @@ build:
     - "-DCMAKE_EXE_LINKER_FLAGS='-fuse-ld=lld'"
     - "-DCMAKE_MODULE_LINKER_FLAGS='-fuse-ld=lld'"
     - "-DCMAKE_SHARED_LINKER_FLAGS='-fuse-ld=lld'"
+  mixin:
+    - ccache
