--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,19 +2,7 @@
 // README at: https://github.com/devcontainers/templates/tree/main/src/docker-existing-dockerfile
 {
 	"name": "Distal Workspace",
-	"dockerComposeFile": "../compose.yml",
-	"service": "distal",
-	"workspaceFolder": "/distal_ws",
-	"shutdownAction": "stopCompose",
-	"customizations": {
-		"vscode": {
-			"extensions": [
-				"ms-vscode.cpptools-extension-pack",
-				"ms-azuretools.vscode-docker",
-				"p1c2u.docker-compose",
-				"formulahendry.docker-extension-pack",
-				"donjayamanne.githistory"
-			]
-		}
+	"build": {
+		"dockerfile": "../Dockerfile"
 	}
 }
